After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660990 - gnome-settings-daemon 3.2 does not redraw volume OSD on changes when not composited
gnome-settings-daemon 3.2 does not redraw volume OSD on changes when not comp...
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: media-keys
3.2.x
Other Linux
: Normal minor
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-05 14:33 UTC by Marien Zwart
Modified: 2011-11-03 11:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Make osd redrawing not conditional on being composited. (460 bytes, patch)
2011-10-05 14:33 UTC, Marien Zwart
none Details | Review

Description Marien Zwart 2011-10-05 14:33:48 UTC
Created attachment 198342 [details] [review]
Make osd redrawing not conditional on being composited.

gnome-settings-daemon-3.2 draws a correct osd window when you hit a media key, but does not redraw that window on volume changes afterwards, unless a compositing manager is running (tested with xcompmgr). 

It looks like the culprit is gsd_osd_window_update_and_hide, which has a description of "Queues the @window for immediate drawing, and queues a timer to hide the window." but only queues a redraw if the window is composited. Removing the check for compositedness makes it work without a compositing manager. Attaching the patch for completeness, but it is quite trivial.

Is this correct or am I overlooking some other way redraws are supposed to be triggered when not composited?
Comment 1 Bastien Nocera 2011-11-03 11:03:57 UTC
commit e6f3e714b104cef3a453b092bce5d2be56497644
Author: Marien Zwart <m_zwart@123mail.org>
Date:   Thu Nov 3 11:00:38 2011 +0000

    media-keys: Redraw volume OSD when not composited
    
    gnome-settings-daemon draws a correct osd window when you hit a
    media key, but does not redraw that window on volume changes afterwards,
    unless a compositing manager is running (tested with xcompmgr).
    
    It looks like the culprit is gsd_osd_window_update_and_hide, which
    has a description of "Queues the @window for immediate drawing, and
    queues a timer to hide the window." but only queues a redraw if the
    window is composited.
    
    Removing the check for compositedness makes it work without a
    compositing manager.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=660990